--- a/home/home.css
+++ b/home/home.css
@@ -14,7 +14,10 @@ body{
 * {
     box-sizing: border-box;
 }
-
+header{
+    padding: 1px 1px ;
+    background-color:#ECFDF5;
+}
 #nav {
     padding: 1rem;
 }
@@ -63,13 +66,16 @@ border-radius: 2rem;
 max-width: 600px;
 height: auto;
 margin: auto;
-display: block;
+text-align: center;
+position: relative;
+top:25px;
 }
 footer{
     padding: 1rem 1rem ;
     background-color:#34D399;
     border-radius: 50%;
 }
+
 .contacts li{
     display: inline-block;
     padding: 0.5rem;
