--- a/home/home.css
+++ b/home/home.css
@@ -57,8 +57,8 @@ header{
 .my_image{
     border-radius:50%;
     position: absolute;
-    bottom:5px;
-    left: 570px;
+    bottom:10px;
+    left: 100px;
     text-align: center;
 }
 .pic{
@@ -71,9 +71,11 @@ position: relative;
 top:25px;
 }
 footer{
-    padding: 1rem 1rem ;
+    position: fixed;
     background-color:#34D399;
     border-radius: 50%;
+    width: 40%;
+    bottom: 0;
 }
 
 .contacts li{
