--- a/blogs/blogs.css
+++ b/blogs/blogs.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-body{
-    box-sizing: border-box;
+main{
     width: 700px;
     margin: auto;
     height: 100%;
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box; 
 }
 
 #nav {
@@ -48,25 +48,22 @@ body{
     font-family:Georgia, 'Times New Roman', Times, serif;
     color:#34D399;
 }
+.newlink:hover{
+    color: #064E3B;
+}
 .info{
     padding: 1rem; font-size: 1rem;
     font-family:Georgia, 'Times New Roman', Times, serif;    
 }
 
 footer{
-    position: relative;
-    width:700px;
-    padding: 3rem;
+    position: absolute;
+    background-color:#34D399;
+    width: 100%;
+    padding: 4rem;
     bottom: 0;
+    text-align:center;
 }
-.contacts li{
-    display: inline-block;
-    padding: 0.5rem;
-}
-.contacts ul {
-    text-align: center;
-    text-decoration: none;
-}  
 .home{
     position: absolute;
     top: 8px;
