--- a/blogs/style1.css
+++ b/blogs/style1.css
@@ -1,53 +1,114 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600&display=swap');
-* {
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+main{
+    width: 700px;
+    margin: auto;
+    height: 100%;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box; 
 }
 
-header{
-    position: fixed;
-    width:100%;
-    padding: 3rem;
-    top:0;
-    text-align: left;
-    color: white;
+#nav {
+    padding: 1rem;
 }
-.link{
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    color: #34D399;
-}
-.blogs{
+#nav .active {
+    font-weight: bolder;
     position: absolute;
-    top: 15px;
-    left: 50px;
+    top: 8px;
 }
-footer{
-   
-    position: fixed;
-    bottom:0;
-    width:100%;
-    padding: 7rem;  
-}  
-.contacts li{
+#nav li {
     display: inline-block;
     padding: 0.5rem;
 }
-.contacts ul {
-    text-align: center;
+#nav ul {
+    text-align: right;
+}
+.container{
+    position: relative;
+  text-align: center;
+
+}
+#name{
     text-decoration: none;
+    font-weight: bolder;
+    color: black;
+    font-size: 1rem;
+    position: absolute;
+    left:0;
+    top:-30px;
+}
+.link{
+    text-decoration:none;
+    padding: 0.5rem 1rem;
+    color: black;   
+}
+.newlink{
+    text-decoration: none;
+    font-size: 2rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color:#34D399;
+}
+.info{
+    padding: 1rem; font-size: 1rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;    
+}
+
+footer{
+    position: relative;
+    background-color:#34D399;
+    max-width: 100%;
+    padding: 4rem;
+    bottom: 0;
+    text-align: center;
+}
+.home{
+    position: absolute;
+    top: 8px;
+    right:220px;
+}    
+.blogs{
+    position: absolute;
+    top: 8px;
+    right: 120px;
+}
+.projects{
+    position: absolute;
+    top: 8px;
+    right:20px;
 }
 .contact-link{
     text-decoration: none;
     padding: 0.5rem 1rem;
     color:#A7F3D0;
 }
-body{
-    font-family: 'Roboto Slab', serif;
+.fa {  
+    padding:20px;  
+  text-align: center;  
+  margin: 5px 1px;  
+    font-size: 30px;  
+    width: 50px; 
+    border-radius:100%; 
+   
+  }  
+  .fa-linkedin {    
+        background: #007bb5;  
+        color: white;  
+      
+  } 
+  .fa-linkedin:hover {
+    background-color: #04354b;
 }
-#content{
-    color: #047857;
-    max-width: 600px;
-    margin: auto;
-    height: 100%;
-    padding:1rem;
+  .fa-github {
+    background: black;  
+    color: white;  
+}
+.fa-github:hover {
+    background-color: #5a32a3;
+}
+.fa-google {
+    background: #dd4b39;  
+  color: white;  
+}
+.fa-google:hover {
+    background-color: #c00b48;
 }
