--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
+body{
+  height: 100%;
+  padding: 0;
+}
 main {
     box-sizing: border-box;
     width: 700px;
     margin: auto;
-    height: 100%;
     font-family: 'Open Sans', sans-serif;  
 }
 
@@ -65,9 +67,9 @@ padding: 1rem;
 footer{
     position: relative;
     background-color:#34D399;
-    max-width: 100%;
-    padding: 4rem;
-    bottom: 0;
+    width: 700px;
+    padding: 0.5rem;
+    left: 400px;
     text-align: center;
 }
 .home{
